// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileWidget renders a file widget component with value 1`] = `
<div>
  <div
    class="inline field field-wrapper-file-widget-with-value"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-file-widget-with-value"
              id="fieldset-default-field-label-file-widget-with-value"
            >
              File Widget With Value
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-file-widget-with-value-image"
              src="http://myfile?id=0"
            />
            <label
              class="label-file-widget-input"
              for="field-file-widget-with-value"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-file-widget-with-value"
              multiple=""
              name="file-widget-with-value"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            <a
              class="external"
              href="http://myfile"
              rel="noopener noreferrer"
              target="_blank"
            >
              myfile
            </a>
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
              type="button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget renders a file widget component with value in raw data 1`] = `
<div>
  <div
    class="inline field field-wrapper-file-widget-raw-data"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-file-widget-raw-data"
              id="fieldset-default-field-label-file-widget-raw-data"
            >
              File Widget With Raw Data
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <img
              class="ui small image image-preview"
              id="field-file-widget-raw-data-image"
              src="data:image/png;base64,oiweurtksdgfjaslfqw9523563456"
            />
            <label
              class="label-file-widget-input"
              for="field-file-widget-raw-data"
            >
              Replace existing file
            </label>
            <input
              autocomplete="off"
              id="field-file-widget-raw-data"
              multiple=""
              name="file-widget-raw-data"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          >
            <a
              class="external"
              rel="noopener noreferrer"
              target="_blank"
            >
              myfile
            </a>
            <button
              aria-label="delete file"
              class="ui basic icon button delete-button"
              type="button"
            >
              <svg
                class="icon"
                style="height: 20px; width: auto; fill: currentColor;"
                viewBox=""
                xmlns=""
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileWidget renders an empty file widget component 1`] = `
<div>
  <div
    class="inline field field-wrapper-empty-file-widget"
  >
    <div
      class="ui grid"
    >
      <div
        class="stretched row"
      >
        <div
          class="four wide column"
        >
          <div
            class="wrapper"
          >
            <label
              for="field-empty-file-widget"
              id="fieldset-default-field-label-empty-file-widget"
            >
              Empty File Widget
            </label>
          </div>
        </div>
        <div
          class="eight wide column"
        >
          <div
            class="file-widget-dropzone"
            tabindex="0"
          >
            <div
              class="dropzone-placeholder"
            >
              <p
                class="dropzone-text"
              >
                Drop file here to upload a new file
              </p>
            </div>
            <label
              class="label-file-widget-input"
              for="field-empty-file-widget"
            >
              Choose a file
            </label>
            <input
              autocomplete="off"
              id="field-empty-file-widget"
              multiple=""
              name="empty-file-widget"
              style="display: none;"
              tabindex="-1"
              type="file"
            />
          </div>
          <div
            class="field-file-name"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
